objects/Policy_Holder_c__c.object
<CustomObject>
    
    <label>Policy Holder</label>
    <nameField>
        <label>Policy Holder</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DOB_c__c</fullName>
        <label>DOB__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_c__c</fullName>
        <label>Name__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_c__c</fullName>
        <label>Email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_c__c</fullName>
        <label>Phone__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender_c__c</fullName>
        <label>Gender__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_c__c</fullName>
        <label>Income__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_c__c</fullName>
        <label>Address__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation_c__c</fullName>
        <label>Occupation__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>